# backend

./: .gitignore  INSTALL.txt  NOTICE.txt  README.md  backend.sublime-project  env.example  pom.xml  pyproject.toml
.cursor/: settings.json
.cursor/rules/: ignore-venv.mdc  python-venv-commands.mdc
api-examples/: README.md  pyproject.toml
api-examples/src/jpl/labcas/examples/: __init__.py  _argparse.py  _credentials.py  _solr.py  cibbbcd_events.py  events_by_blind.py
common/: pom.xml
common/src/main/assembly/: assembly.xml
common/src/main/etc/: bu_rnaseq_create_file_metadata.py  convert_svs_to_tif.sh  delete_collection.sh  delete_dataset.sh  dicom_make_dir_structure.py  dicom_met_extractor.py  dicom_nlst_make_dir_structure.py  dicom_thumbnail_generator.py  labcas_publish_all.sh  moffitt_make_dir_structure.py  openslide_thumbnail_generator.py  publish_all_ecas_data.sh  publish_mast_data.sh  publish_mdanderson_ipmn.sh  publish_nlst_data.sh  publish_ucdavis_team37_data.sh  reorder_mdandreson_ipmn.py  reorder_rnaseq_data.sh  ucdavis_parse_csv_into_sftp.py  ucdavis_sftp_download.py  ucdavis_sftp_download_all.py  ucdavis_sftp_list.py
common/src/main/etc/pre-hierarchy/: publish_all_ecas_data.sh  publish_rnaseq_data.sh
common/src/main/java/: MyTest.java
common/src/main/python/scripts/: dicom_make_dir_structure.py
common/src/main/resources/: labcas.properties  log4j.properties  manifest.txt  mime-types.properties
common/src/main/scripts/: env.sh  publish_all_ecas_data.sh  start.sh  stop.sh
data-access-api/: pom.xml
data-access-api/WebContent/WEB-INF/: web.xml
docker/: Dockerfile  README.md  docker-compose.yaml
docs/: backend-postman-api.json
examples/: labcas-nist-workflowmgr-client.py  labcas-solrpy-example-client.py  labcas-upload-update-query-example.py  labcas-xmlrpc-example-client.py  labcas-xmlrpc-example-filemgr-client.py  labcas-xmlrpc-example-workflowmgr-client.py
labcas-client/: labcas_publish_collection  labcas_publish_dataset  labcas_unpublish_collection  labcas_unpublish_dataset
oodt/: pom.xml
oodt/src/main/resources/: filemgr.properties  labcas-action-beans.xml  workflow.properties
oodt/src/main/resources/crawler/: crawler-config.xml  labcas-action-beans.xml  logging.properties
oodt/src/main/resources/filemgr/: filemgr  filemgr-client  filemgr.properties  logging.properties
oodt/src/main/resources/fmprod/: log4j.properties  web.xml
oodt/src/main/resources/resource/: logging.properties
oodt/src/main/resources/workflow/: logging.properties  wmgr  (+2 more)
resources/qupath/: AnnotationsToJson.groovy  ExportImageWithAnnotations.groovy
solr/: pom.xml
solr/src/main/resources/: log4j.properties  solr.xml
src/jpl/: __init__.py
src/jpl/labcas/: __init__.py
src/jpl/labcas/backend/: __init__.py  logging_config.py  main.py
support/: jwt.sh
tests/: test_access_control.py  test_auth_endpoints.py  test_collections_list.py  test_download_endpoints.py  test_download_service.py  test_health.py  test_jwt_manager.py  test_list_service.py  test_query_endpoints.py  test_query_service.py  test_security.py  test_zip_endpoint.py  test_zipperlab_service.py
tomcat/: ServerInfo.properties  pom.xml  server.xml  web.xml
workflows/: pom.xml
(+366 files in other folders)
